Fix alphabets not centering on Firefox
Apparently it's a miracle that the alphabets were centered in the first
place. Absolutely positioned elements are out-of-flow and as such they
should not be subject to flexbox's calculations. The correct way to have
it centered is the good ol' top 50% and translateY -50% trick.

--- a/src/components/CourseList.scss
+++ b/src/components/CourseList.scss
@@ -35,6 +35,8 @@
   position: absolute;
   left: -30px;
   color: #9b9b9d;
+  top: 50%;
+  transform: translateY(-50%);
   text-align: right;
 }
 
